--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
     "hostRequirements": {
-     "cpus": 24
+        "cpus": 8,
+        "memory": "16gb",
+        "storage": "32gb"
     },
     "image": "mcr.microsoft.com/devcontainers/base:ubuntu",
     "features": {
